--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
   <!-- hireo sissone start -->
   <div id="about" class="HiOre container">
     <div
-      class="bg-[#101123] min-h-screen px-6 md:px-20 flex flex-col md:flex-row items-center justify-between gap-10 py-10">
+      class="bg-[#101123ec] min-h-screen px-6 md:px-20 flex flex-col md:flex-row items-center justify-between gap-10 py-10">
 
       <!-- Left Content -->
       <div class=" sm:pt-10 text-white max-w-lg text-center md:text-left">
@@ -201,7 +201,7 @@
 
   <!-- skills sission start-->
   <div id="skills" class="skills">
-    <div class="container min-h[400px]  px-20 bg-[#101123] ">
+    <div class="container min-h[400px] px-5  md:px-20 bg-[#101123] ">
       <div class="text-center py-2">
         <button
           class="text-2xl riten  font-bold text-white bg-gray-500 rounded-md px-6 py-2 shadow-lg hover:bg-gray-600 transition">skills</button>
@@ -408,7 +408,7 @@
       </div>
 
       <!-- Content -->
-      <div class="flex flex-col md:flex-row md:justify-between items-center gap-10">
+      <div class="flex flex-col md:flex-row md:justify-between ">
         <!-- Image -->
         <div class="w-full md:w-1/3 flex justify-center">
           <img src="./public/imags/converted_image_300x300.jpg"
@@ -417,9 +417,9 @@
         </div>
 
         <!-- Education Items -->
-        <div class="flex flex-col gap-6 w-full md:w-2/3">
+        <div class="flex flex-col gap-6 justify-between  ">
           <div
-            class="text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
+            class=" mt-4 md:w-[400px] text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
             <span class="block text-center text-cyan-950 font-bold text-[15px]">(2025-Present)</span>
             <div class="flex flex-col sm:flex-row sm:items-center mt-2">
               <div class="text-center pr-4 text-2xl text-blue-950 py-2">
@@ -433,7 +433,7 @@
           </div>
 
           <div
-            class="text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
+            class=" md:w-[400px] text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
             <span class="block text-center text-cyan-950 font-bold text-[15px]">(2023-2025)</span>
             <div class="flex flex-col sm:flex-row sm:items-center mt-2">
               <div class="text-center pr-4 text-2xl text-blue-900 py-2">
@@ -447,7 +447,7 @@
           </div>
 
           <div
-            class="text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
+            class="md:w-[400px] text-gray-400 border-2 px-5 py-3 bg-[#101123] border-gray-700 hover:border-blue-500 transition duration-300 rounded-lg">
             <span class="block text-center text-cyan-950 font-bold text-[15px]">(Sep 2025-Present)</span>
             <div class="flex flex-col sm:flex-row sm:items-center mt-2">
               <div class="text-center pr-4 text-2xl text-blue-900 py-2">
